Added references and modified section 1.2

--- a/proceedings/jet_sub.tex
+++ b/proceedings/jet_sub.tex
@@ -106,7 +106,7 @@ Figure~\ref{fig:jets:np:qg} shows the groomed jet mass predicted for dijet event
 \label{fig:jets:np:qg}
 \end{figure}
 
-The large model-dependence for gluon jets in Fig.~\ref{fig:jets:np:qg} motivated further studies.  It was found that the differences between quarks and gluons and between models were unrelated to gluon splitting to heavy flavor quarks and to specific hadronic resonances.  The effects are nearly 100\% correlated with jet constituent multiplicity.  Furthermore, the results depend strongly on the grooming parameters ($\beta$ and $z_\text{cut}$).  Additional studies are illustrated in Fig.~\ref{fig:jets:np:tracks}.  In particular, the blue and green lines fix everything about the simulation except for the hadronization model.  For $\lesssim\log_{10}(m^2/p_T^2)\lesssim -5$, there are $\mathcal{O}(1)$ differences between models while the rest of the spectrum is nearly unchanged, as expected.  However, this region is not probed differentially in the most recent ATLAS and CMS jet mass measurements.  The left plot of Fig.~\ref{fig:jets:np:tracks} shows that the entire region of interest for the large non-perturbative effects is covered by a single measurement bin.  The experimental jet mass resolution is poor in this region due to finite calorimeter granularity.  The right plot of Fig.~\ref{fig:jets:np:tracks} shows that the trends are largely preserved when only using tracking information, which has the potential to provide the necessary precision to probe the non-perturbative region in detail.
+The large model-dependence for gluon jets in Fig.~\ref{fig:jets:np:qg} motivated further studies.  It was found that the differences between quarks and gluons and between models were unrelated to gluon splitting to heavy flavor quarks and to specific hadronic resonances.  The effects are nearly 100\% correlated with jet constituent multiplicity.  Furthermore, the results depend strongly on the grooming parameters ($\beta$ and $z_\text{cut}$).  Additional studies of the dependence on the hadronization model are illustrated in Fig.~\ref{fig:jets:np:tracks}. In this figure a comparison is made for gluon jets originating from $pp\to Zg$ for 3 different showers and making use of 2 different hadronization models.  In particular, the blue and green lines are produced using Sherpa~2.2.6~\cite{Bothmann:2019yzt} and fix everything about the simulation except for the hadronization model, which is switched between the default Cluster hadronization model~\cite{Winter:2003tt} and the Lund String model~\cite{Sjostrand:1982fn}. In addition lines for Pythia~8.2~\cite{Sjostrand:2014zea} and Vincia~2.3-$\beta$~\cite{Fischer:2016vfv} are included, both of which make use of the Lund String model. For $\lesssim\log_{10}(m^2/p_T^2)\lesssim -5$, there are $\mathcal{O}(1)$ differences between the different hadronization models while the rest of the spectrum is nearly unchanged, as expected.  However, this region is not probed differentially in the most recent ATLAS and CMS jet mass measurements.  The left plot of Fig.~\ref{fig:jets:np:tracks} shows that the entire region of interest for the large non-perturbative effects is covered by a single measurement bin.  The experimental jet mass resolution is poor in this region due to finite calorimeter granularity.  The right plot of Fig.~\ref{fig:jets:np:tracks} shows that the trends are largely preserved when only using tracking information, which has the potential to provide the necessary precision to probe the non-perturbative region in detail.
 
 \begin{figure}[h!]
 \centering
