--- a/proceedings/lh2019.bib
+++ b/proceedings/lh2019.bib
@@ -1,3 +1,4 @@
+% Encoding: UTF-8
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 @article{Aad:2019onw,
@@ -20,8 +21,8 @@
 }
 
 @article{lundPlane,
-      author         = "Dreyer, Frédéric A. and Salam, Gavin P. and Soyez,
-                        Grégory",
+      author         = "Dreyer, Frï¿½dï¿½ric A. and Salam, Gavin P. and Soyez,
+                        Grï¿½gory",
       title          = "{The Lund Jet Plane}",
       journal        = "JHEP",
       volume         = "12",
@@ -598,7 +599,7 @@ url="https://doi.org/10.1007/s002880050312"
 
 
 @article{Hoang:2015hka,
-      author         = "Hoang, André H. and Kolodrubetz, Daniel W. and Mateu,
+      author         = "Hoang, Andrï¿½ H. and Kolodrubetz, Daniel W. and Mateu,
                         Vicent and Stewart, Iain W.",
       title          = "{Precise determination of $\alpha_s$ from the
                         $C$-parameter distribution}",
@@ -716,7 +717,7 @@ url="https://doi.org/10.1140/epjc/s2004-01891-4"
 }
 
 @article{Kardos:2018kth,
-      author         = "Kardos, Adam and Somogyi, Gábor and Trocsanyi,
+      author         = "Kardos, Adam and Somogyi, Gï¿½bor and Trocsanyi,
                         Zoltan",
       title          = "{Soft-drop event shapes in electron?positron
                         annihilation at next-to-next-to-leading order accuracy}",
@@ -848,7 +849,7 @@ url="https://doi.org/10.1140/epjc/s2004-01891-4"
       SLACcitation   = "%%CITATION = ARXIV:1402.2657;%%"
 }
 @article{Hoang:2019ceu,
-      author         = "Hoang, André H. and Mantry, Sonny and Pathak, Aditya and
+      author         = "Hoang, Andrï¿½ H. and Mantry, Sonny and Pathak, Aditya and
                         Stewart, Iain W.",
       title          = "{Nonperturbative Corrections to Soft Drop Jet Mass}",
       journal        = "JHEP",
@@ -6715,3 +6716,67 @@ url="https://doi.org/10.1140/epjc/s2004-01891-4"
 	Volume = {08},
 	Year = {1997},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1088/1126-6708/1997/08/001}}
+
+@Article{Fischer:2016vfv,
+  author        = {Fischer, Nadine and Prestel, Stefan and Ritzmann, Mathias and Skands, Peter},
+  title         = {{Vincia for Hadron Colliders}},
+  journal       = {Eur. Phys. J.},
+  year          = {2016},
+  volume        = {C76},
+  number        = {11},
+  pages         = {589},
+  doi           = {10.1140/epjc/s10052-016-4429-6},
+  eprint        = {1605.06142},
+  archiveprefix = {arXiv},
+  primaryclass  = {hep-ph},
+  reportnumber  = {COEPP-MN-16-11, MCNET-16-13, SLAC-PUB-16529, NIKHEF-2016-020},
+  slaccitation  = {%%CITATION = ARXIV:1605.06142;%%},
+}
+
+@Article{Bothmann:2019yzt,
+  author        = {Bothmann, Enrico and others},
+  title         = {{Event Generation with Sherpa 2.2}},
+  journal       = {SciPost Phys.},
+  year          = {2019},
+  volume        = {7},
+  number        = {3},
+  pages         = {034},
+  doi           = {10.21468/SciPostPhys.7.3.034},
+  eprint        = {1905.09127},
+  archiveprefix = {arXiv},
+  collaboration = {Sherpa},
+  primaryclass  = {hep-ph},
+  reportnumber  = {FERMILAB-PUB-19-218-T, SLAC-PUB-17433, IPPP/19/42, MCNET-19-11},
+  slaccitation  = {%%CITATION = ARXIV:1905.09127;%%},
+}
+
+@Article{Winter:2003tt,
+  author        = {Winter, Jan-Christopher and Krauss, Frank and Soff, Gerhard},
+  title         = {{A Modified cluster hadronization model}},
+  journal       = {Eur. Phys. J.},
+  year          = {2004},
+  volume        = {C36},
+  pages         = {381-395},
+  doi           = {10.1140/epjc/s2004-01960-8},
+  eprint        = {hep-ph/0311085},
+  __markedentry = {[vtheeuwe:]},
+  archiveprefix = {arXiv},
+  primaryclass  = {hep-ph},
+  reportnumber  = {CERN-TH-2003-272},
+  slaccitation  = {%%CITATION = HEP-PH/0311085;%%},
+}
+
+@Article{Sjostrand:1982fn,
+  author        = {Sjostrand, Torbjorn},
+  title         = {{The Lund Monte Carlo for Jet Fragmentation}},
+  journal       = {Comput. Phys. Commun.},
+  year          = {1982},
+  volume        = {27},
+  pages         = {243},
+  doi           = {10.1016/0010-4655(82)90175-8},
+  __markedentry = {[vtheeuwe:6]},
+  reportnumber  = {LU TP 82-3},
+  slaccitation  = {%%CITATION = CPHCB,27,243;%%},
+}
+
+@Comment{jabref-meta: databaseType:biblatex;}
