went through sections 1, 2 and 5

--- a/proceedings/gluon_pdf.tex
+++ b/proceedings/gluon_pdf.tex
@@ -89,7 +89,7 @@ We conclude that the PDF uncertainty becomes the dominant one if the $gg$ purity
 \includegraphics[width=0.49\textwidth, page=4]{figs/performance-plots.pdf} \hfill
 \includegraphics[width=0.49\textwidth, page=5]{figs/performance-plots.pdf}
 \caption{The plot on the left show the tagging performance of the Les Houches energy correlation function and Les Houches multiplicity discussed in this study. 
-The ROC curve are obtained using a numerical simulation with the Monte Carlo parton shower Pythia~8.230~\cite{Sjostrand:2014zea}, with the Monash13 tune~\cite{Skands:2014pea} and they are compared to Casimir scaling and the extrapolated performance of a neural-network based tagger that makes use of jet topics~\cite{Metodiev:2018ftz,Komiske:2018vkc}.
+The ROC curve are obtained using a numerical simulation with the Monte Carlo parton shower \textsc{Pythia}~8.230~\cite{Sjostrand:2014zea}, with the Monash13 tune~\cite{Skands:2014pea} and they are compared to Casimir scaling and the extrapolated performance of a neural-network based tagger that makes use of jet topics~\cite{Metodiev:2018ftz,Komiske:2018vkc}.
 The plot on the right show, for each of the tagger (or idealised tagger) we have have considered here, the different sources of uncertainties (namely, PDF, statistical and systematic uncertainties, as a function of the gluon efficiency. 
 }
 \label{fig:performance_studies} 
@@ -105,7 +105,7 @@ Furthermore, jet shapes are fairly-well understood observables and precision-cal
 %
 The ROC curve for this tagger is shown in green on the left-hand plot of  Fig.~\ref{fig:performance_studies}. We note that despite the fact that jet shapes exhibit Casimir scaling at their lowest order (leading logarithmic accuracy) their discriminating power is increased if higher-order effects are included.
 %
-The curve has been obtained using a numerical simulation with the Monte Carlo parton shower Pythia~8.230~\cite{Sjostrand:2014zea}, with the Monash13 tune~\cite{Skands:2014pea}.
+The curve has been obtained using a numerical simulation with the Monte Carlo parton shower \textsc{Pythia}~8.230~\cite{Sjostrand:2014zea}, with the Monash13 tune~\cite{Skands:2014pea}.
 
 
 Given the above consideration, it is natural to wonder if it is possible to find substructure tools
