--- a/proceedings/jet_sub.tex
+++ b/proceedings/jet_sub.tex
@@ -66,29 +66,29 @@ Studies related to gluon jets have played a key role in particle and nuclear phy
 \subsection{Introduction}
 \label{sec:jets:intro}
 
-Jets are collimated sprays of hadrons that emerge from high energy quarks and gluons and are an important asset or significant nuisance in a a majority of collider particle physics analyses.  Understanding jets and their internal structure (jet substructure~\cite{Abdesselam:2010pt,Altheimer:2012mn,Altheimer:2013yza,Adams:2015hiv,Asquith:2018igt,Larkoski:2017jix,Marzani:2019hun}) will directly or indirectly address a variety of fundamental questions in particle and nuclear physics.  One of the first studies related to jet substructure occurred nearly four decades ago, with the direct discovery of the gluon at PETRA~\cite{Brandelik:1979bd,Barber:1979yr,Berger:1979cj,Bartel:1979ut,Ellis:2014rma}.  It was of paramount importance at the time to study differences between jets initiated by quarks (quark jets) and jets initiated by gluons (gluon jets) in order to categorize the properties of the new boson.  This complex topic is still an active area of research in the present day and was the subject of the 2015 Les Houches report on jets~\cite{Badger:2016bpw,Gras:2017jty}.   The goal of this report is to study gluon jets at all relevant energies at the LHC, from non-perturbative scales all the way to the highest accessible energies.   Traversing nearly four decades in energy scales will reveal a plethora of interesting phenomena.  
+Jets are collimated sprays of hadrons that emerge from high energy quarks and gluons and are an important asset or significant nuisance in the majority of collider particle physics analyses.  Understanding jets and their internal structure (jet substructure~\cite{Abdesselam:2010pt,Altheimer:2012mn,Altheimer:2013yza,Adams:2015hiv,Asquith:2018igt,Larkoski:2017jix,Marzani:2019hun}) will directly or indirectly address a variety of fundamental questions in particle and nuclear physics.  One of the first studies related to jet substructure occurred nearly four decades ago, with the direct discovery of the gluon at PETRA~\cite{Brandelik:1979bd,Barber:1979yr,Berger:1979cj,Bartel:1979ut,Ellis:2014rma}.  It was of paramount importance at the time to study differences between jets initiated by quarks (quark jets) and jets initiated by gluons (gluon jets) in order to categorize the properties of the new boson.  This complex topic is still an active area of research in the present day and was the subject of the 2015 Les Houches report on jets~\cite{Badger:2016bpw,Gras:2017jty}.   The goal of this report is to study gluon jets at all relevant energies at the LHC, from non-perturbative scales all the way to the highest accessible energies.   Traversing nearly four decades in energy scales will reveal a plethora of interesting phenomena.  
 
-At the lowest energies, jets are dominated by non-perturbative effects.  While there has been significant progress in understanding jet formation when fixed-order or resummed perturbation theory is accurate, there has been much less progress outside these regions of phase space.  While such contributions are often small for most observables, they are relevant for any precision program involving hadronic final states.  One example is the determination of the strong coupling constant, $\alpha_s$, from hadronic event shapes~\cite{Abbate:2010xh,Hoang:2015hka,TheALEPHCollaboration2004,DELPHICollaboration1997,Abdallah:2004xe,Biebel:1999zt,Abbiendi:2004qz,Buskulic:1992hq}.   After lattice determinations, the most precise extractions of $\alpha_s$ use thrust and the $C$-parameter from $e^+e^-$ data.  One of the biggest challenges of this extraction is that the non-perturbative corrections are nearly degenerate with changes to $\alpha_s$~\cite{Abbate:2010xh}.  The 2017 Les Houches report on jets studied the possibility of using jet substructure at the LHC to determine $\alpha_s$~\cite{Bendavid:2018nar}.  A key ingredient to this study is jet grooming, which is a set of tools to systematically remove soft and wide angle radiation within a jet.  Well-designed grooming algorithms allow for precise theory predictions of certain observables in part because the magnitude and the onset of non-perturbative effects can be parametrically suppressed with respect to the un-groomed case.  While jet grooming may not be enough to eliminate the need to estimate non-perturbative effects, grooming may provide a unique opportunity to isolate these effects for further study.   While the perturbative regions of phase space have received significant attention from the community~\cite{Frye:2016aiz,Frye:2016okc,Marzani:2017mva,Marzani:2017kqd,Kang:2018vgn,Kang:2018jwa,Baron:2018nfz,Kardos:2018kth}, the non-perturbative regions have only recently been investigated~\cite{Hoang:2019ceu}.   One of the goals of this report is to explore the non-perturbative region of groomed jets using phenomenological tools for guidance. 
+At the lowest energies, jets are dominated by non-perturbative effects.  While there has been significant progress in understanding jet formation when fixed-order or resummed perturbation theory is accurate, there has been much less progress outside these regions of phase space.  While such contributions are small for many observables of interest, they are relevant for any precision program involving hadronic final states.  One example is the determination of the strong coupling constant, $\alpha_s$, from hadronic event shapes~\cite{Abbate:2010xh,Hoang:2015hka,TheALEPHCollaboration2004,DELPHICollaboration1997,Abdallah:2004xe,Biebel:1999zt,Abbiendi:2004qz,Buskulic:1992hq}.   After lattice determinations, the most precise extractions of $\alpha_s$ use thrust and the $C$-parameter from $e^+e^-$ data.  One of the biggest challenges of this extraction is that the non-perturbative corrections are nearly degenerate with changes to $\alpha_s$~\cite{Abbate:2010xh}.  The 2017 Les Houches report on jets studied the possibility of using jet substructure at the LHC to determine $\alpha_s$~\cite{Bendavid:2018nar}.  A key ingredient to this study is jet grooming, which is a set of tools to systematically remove soft and wide angle radiation within a jet.  Well-designed grooming algorithms allow for precise theory predictions of certain observables in part because the magnitude and the onset of non-perturbative effects can be parametrically suppressed with respect to the un-groomed case.  While jet grooming may not be enough to eliminate the need to estimate non-perturbative effects, grooming may provide a unique opportunity to isolate these effects for further study.   While the perturbative regions of phase space have received significant attention from the community~\cite{Frye:2016aiz,Frye:2016okc,Marzani:2017mva,Marzani:2017kqd,Kang:2018vgn,Kang:2018jwa,Baron:2018nfz,Kardos:2018kth}, the non-perturbative regions have only recently been investigated~\cite{Hoang:2019ceu}.   One of the goals of this report is to explore the non-perturbative region of groomed jets using phenomenological tools for guidance. 
 
 Both perturbative and non-perturbative regions of phase space at low energy can be important inputs to Parton Shower Monte Carlo (PSMC) parameter tuning.  In particular, there is a need for data enriched in gluon jets as many of the existing tunes are either based solely on or are anchored based on $e^+e^-$ data.  While those data are free from many nuisances like the underlying event, they are dominated by quark jets.  Various tuning campaigns at the LHC have found potential sources of tension between tunes that use jet substructure from the LHC and those that use jet and event shapes from LEP~\cite{ATL-PHYS-PUB-2014-021,Aad:2016oit}.  It is therefore critical to collect new measurements with unique and overlapping sensitivity to a variety of phase space regions.  The community repository for storing measurements is HepData~\cite{Buckley:2010jn,Maguire:2017ypu} and the standard for encoding an analysis for reinterpretation is Rivet~\cite{Buckley:2010ar}.  In the preparation of this report, new routines have been added to the existing databases and a list of jet substructure measurements from the LHC experiments has been tabulated.
 
-While many aspects of PSMC programs are built on phenomenological models that must be tuned to data, there are also a variety of components that are based on fundamental aspects of the strong force and can be systematically improved.  Various MC programs such as \textsc{Dire}, \textsc{Vincia}, and \textsc{Deductor} include various subleading resummation, helicity, and color corrections.  In particular, the \textsc{Dire} program, which is a plugin to both \textsc{Pythia} or \textsc{Sherpa} now includes all of the next-to-leading order components of the QCD splitting functions including the triple-collinear and double-soft splittings.   The 2017 Les Houches report briefly reported an investigation of standard jet substructure observables (such as the two-prong tagger $N_2$~\cite{Moult:2016cvt}) to the triple collinear splitting function~\cite{Bendavid:2018nar}.  A non-exhaustive list of such observables showed no sensitivity to this splitting function.  In order to know if any jet observable is sensitive to the extended physics modeling, deep neural network classifiers were constructed using the full observable jet phase space (kinematics and particle types).   This study confirmed that the triple-collinear splitting function is essentially non-observable, but the neural networks were able to significantly detect the double-soft splitting function.  Future work is required to construct simple observables that may become near-future measurements for probing this in data.
+While many aspects of PSMC programs are built on phenomenological models that must be tuned to data, there are also a variety of components that are based on fundamental aspects of strong interactions and can be systematically improved.  Various MC programs such as \textsc{Dire}, \textsc{Vincia}, and \textsc{Deductor} include various subleading resummation, helicity, and color corrections.  In particular, the \textsc{Dire} program, which is a plugin to both \textsc{Pythia} or \textsc{Sherpa} now includes all of the next-to-leading order components of the QCD splitting functions including the triple-collinear and double-soft splittings.   The 2017 Les Houches report briefly discussed an investigation of standard jet substructure observables (such as the two-prong tagger $N_2$~\cite{Moult:2016cvt}) to the triple collinear splitting function~\cite{Bendavid:2018nar}.  A non-exhaustive list of such observables showed no sensitivity to this splitting function.  In order to know if any jet observable is sensitive to the extended physics modelling, deep neural network classifiers were constructed using the full observable jet phase space (kinematics and particle types).   This study confirmed that the triple-collinear splitting function is essentially non-observable, but the neural networks were able to significantly detect the double-soft splitting function.  Future work is required to construct simple observables that may become near-future measurements for probing this in data.
 
 Jet classification techniques have been used for a variety of other tasks, including quark versus gluon (q/g) jet tagging.  In the context of Les Houches 2019, the focus of q/g tagging was on the isolation of vector boson fusion (VBF) and vector boson scattering (VBS) processes.  These processes are distinguished in part by two moderate $p_T$ forward quark jets.  In the context of Higgs production, quark/gluon tagging is useful both for separating the Higgs from other Standard Model backgrounds as well as separating different Higgs production modes.   The usefulness of q/g tagging to distinguish the gluon fusion (ggH) and VBF Higgs production modes was first investigated by CMS~\cite{Khachatryan:2015bnx}.  This report will show additional studies to understand the interplay between q/g tagging and other analysis selections such as requiring a large dijet invariant mass ($m_{jj}$).
 
-While q/g tagging has traditionally been used to \textit{reject quarks}, there may also be a physics case for tagging gluons.  One possibility in particular is the possibility of using gluon jets to constrain the gluon parton distribution function (PDF).  The gluon PDF has a large uncertainty at high $x$ ($m_{jj}\sim 1$ TeV) because the existing inclusive jet data are dominated by $qq$ initial states and $gg$ constraints from $t\bar{t}$ production become statistically limited.  What if one could directly measure the $gg$ reaction cross section?  The first step in answering this question is to establish a strong correlation between the initial and final state flavors.  This means that gluon tagging the final state will bias the initial state to be more gluonic.   The second step is to identify the tradeoff between tagging performance and uncertainties.  If the current PDF uncertainty can be made larger than the statistical and systematic uncertainties, new data would be useful in constraining the gluon PDF.  Lastly, it is important that the gluon tagging strategy is theoretically well-understood so that it can be simultaneously calculated with the $p_T$ spectrum as input to the PDF fits.  For this purpose, a new observable is considered - the \textit{Les Houches multiplicity} $n_\text{LH}$, first proposed in Ref.~\cite{Marzani:2019hun} as a variation on the iterative soft drop multiplicity~\cite{Frye:2017yrw}.
+While q/g tagging has traditionally been used to \textit{reject quarks}, there may also be a physics case for tagging gluons.  One possibility in particular is the possibility of using gluon jets to constrain the gluon parton distribution function (PDF).  The gluon PDF has a large uncertainty at high $x$ ($m_{jj}\sim 1$ TeV) because the existing inclusive jet data are dominated by $qq$ initial states and $gg$ constraints from $t\bar{t}$ production become statistically limited.  What if one could directly measure the $gg$ reaction cross section?  The first step in answering this question is to establish a strong correlation between the initial and final state flavors.  This means that gluon tagging the final state will bias the initial state to be more gluonic.   The second step is to identify the tradeoff between tagging performance and uncertainties.  If the current PDF uncertainty can be made larger than the statistical and systematic uncertainties, new data would be useful in constraining the gluon PDF.  Lastly, it is important that the gluon tagging strategy is theoretically well-understood so that it can be simultaneously calculated with the $p_T$ spectrum as input to the PDF fits.  For this purpose, a new observable is considered - the \textit{Les Houches multiplicity} $n_\text{LH}$, first proposed in Ref.~\cite{Marzani:2019hun} as a variation on the iterative SoftDrop multiplicity~\cite{Frye:2017yrw}.
 
 At the kinematic limit of LHC jets, gluon tagging may also have an important role for searches for new particles.  While not studied extensively at Les Houches, there was a general brainstorming session for gluon tagging applications and one promising example is the search for $X\rightarrow gg$.  At high $m_{jj}$, the SM background is dominated by valence quark scattering.  Furthermore, gluon tagging is more useful at high $p_T$ where counting observables like $n_{LH}$ have a better q/g tagging performance.  For these reasons, gluon tagging has an interesting potential to increase the sensitivity of the high mass dijet search.
 %https://arxiv.org/pdf/1912.03511.pdf
 
-This remainder of this chapter is organized from low to high energy3.  Section~\ref{sec:jets:np} begins with studies related to non-perturbative aspects of jets after grooming.  Then, Sec.~\ref{sec:jets:mc} investigates the potential for jet substructure observables for PSMC tuning.  Next, section~\ref{sec:jets:psmc} presents methods for probing higher-order effects in PSMCs.  A brief study of q/g tagging in the context of VBF/VBS is highlighted in Sec.~\ref{sec:jets:vbsbvf}.  At higher energies, the feasibility of Suppressing QUarks in the Region of RElatively Large-$x$ (\textsc{Squirrel}) is studied for the gluon PDF in Sec.~\ref{sec:jets:pdf}.  The kinematic limit is briefly described in Sec.~\ref{sec:jets:highest} and the chapter ends with conclusions and outlook in Sec.~\ref{sec:jets:conclusion}.
+This remainder of this chapter is organized from low to high energy.  Section~\ref{sec:jets:np} begins with studies related to non-perturbative aspects of jets after grooming.  Then, Sec.~\ref{sec:jets:mc} investigates the potential for jet substructure observables for PSMC tuning.  Next, section~\ref{sec:jets:psmc} presents methods for probing higher-order effects in PSMCs.  A brief study of q/g tagging in the context of VBF/VBS is highlighted in Sec.~\ref{sec:jets:vbsbvf}.  At higher energies, the feasibility of Suppressing QUarks in the Region of RElatively Large-$x$ (\textsc{Squirrel}) is studied for the gluon PDF in Sec.~\ref{sec:jets:pdf}.  The kinematic limit is briefly described in Sec.~\ref{sec:jets:highest} and the chapter ends with conclusions and outlook in Sec.~\ref{sec:jets:conclusion}.
 
 \subsection{Non-Perturbative effects at low jet mass}
 \label{sec:jets:np}
 
-Jet grooming is the systematic removal of soft and wide-angle emission from inside a jet.  Advances in jet grooming have resulted in algorithms like soft drop and the modified mass drop tagger (mMDT)~\cite{Larkoski:2014wba,Dasgupta:2013ihk} that are amenable to high order resummation.   Both ATLAS~\cite{Aaboud:2017qwh,Aad:2019vyi} and CMS~\cite{Sirunyan:2018xdh} have measured the soft drop jet mass and compared the differential cross section with theoretical calculations~\cite{Frye:2016aiz,Frye:2016okc,Marzani:2017mva,Marzani:2017kqd,Kang:2018vgn,Kang:2018jwa,Baron:2018nfz,Kardos:2018kth}.  As the level of both experimental and theoretical precision improves, it is natural to consider what are the next challenges.  The reconstruction and prediction of jet masses near the non-perturbative regime $k_T\lesssim \Lambda_\text{QCD}$ is becoming just as if not more important than improving the experimental and theoretical precision at medium and high masses.
+Jet grooming is the systematic removal of soft and wide-angle emission from inside a jet.  Advances in jet grooming have resulted in algorithms like SoftDrop and the modified mass drop tagger (mMDT)~\cite{Larkoski:2014wba,Dasgupta:2013ihk} that are amenable to high order resummation.   Both ATLAS~\cite{Aaboud:2017qwh,Aad:2019vyi} and CMS~\cite{Sirunyan:2018xdh} have measured the SoftDrop jet mass and compared the differential cross section with theoretical calculations~\cite{Frye:2016aiz,Frye:2016okc,Marzani:2017mva,Marzani:2017kqd,Kang:2018vgn,Kang:2018jwa,Baron:2018nfz,Kardos:2018kth}.  As the level of both experimental and theoretical precision improves, it is natural to consider what are the next challenges.  The reconstruction and prediction of jet masses near the non-perturbative regime $k_T\lesssim \Lambda_\text{QCD}$ is becoming just as if not more important than improving the experimental and theoretical precision at medium and high masses.
 
-At the same time, jet grooming also offers an exciting opportunity to study non-perturbative effects in isolation.  In particular, non-perturbative corrections to the jet mass are localized after jet grooming.  This is illustrated in Fig.~\ref{fig:jets:np:illustration}.  Turning on and off non-perturbative modeling in Pythia lead to an $\mathcal{O}(1)$ effect in the differential cross section, but only at low jet masses.  The goal of this section is to use phenomenological tools to investigate this structure in more detail.  This region of the phase space is particularly hard to measure experimentally and has thus far largely been avoided.  However, innovations in mass reconstruction will improve the precision at low mass and this region may be well-suited for non-perturbative studies including phenomenological model tuning.  Analytic approaches to also probe this region are also an important complement to these studies and have begun with the recent work in Ref.~\cite{Hoang:2019ceu}.
+At the same time, jet grooming also offers an exciting opportunity to study non-perturbative effects in isolation.  In particular, non-perturbative corrections to the jet mass are localized after jet grooming.  This is illustrated in Fig.~\ref{fig:jets:np:illustration}.  Turning on and off non-perturbative modeling in \textsc{Pythia} lead to an $\mathcal{O}(1)$ effect in the differential cross section, but only at low jet masses.  The goal of this section is to use phenomenological tools to investigate this structure in more detail.  This region of the phase space is particularly hard to measure experimentally and has thus far largely been avoided.  However, innovations in mass reconstruction will improve the precision at low mass and this region may be well-suited for non-perturbative studies including phenomenological model tuning.  Analytic approaches to also probe this region are also an important complement to these studies and have begun with the recent work in Ref.~\cite{Hoang:2019ceu}.
 
 \begin{figure}[h!]
 \centering
@@ -97,16 +97,16 @@ At the same time, jet grooming also offers an exciting opportunity to study non-
 \label{fig:jets:np:illustration}
 \end{figure}
 
-Figure~\ref{fig:jets:np:qg} shows the groomed jet mass predicted for dijet events using Pythia and Herwig and separated into quark jets and gluon jets.  The soft drop grooming algorithm is used with the most aggressive grooming parameter $\beta=0$ (this also corresponds to mMDT).  The leading logarithm prediction for the differential cross section in the intermediate mass region ($-3\lesssim\log_{10}(m^2/p_T^2)\lesssim -2$) is a linear distribution with the slope proportional to the QCD color factor and $\alpha_s$.  For this reason, the quark distribution is flatter with respect to the gluon distribution.  In the absence of non-perturbative effects, these trends would continue down to arbitrarily small masses. Interestingly, the non-perturbative corrections are very different for quarks and gluons, with a much larger bump for quarks.  Furthermore, the corrections for Pythia and Herwig gluons are qualitatively different, with a clear peak for Pythia gluons and the absence of a peak for Herwig.
+Figure~\ref{fig:jets:np:qg} shows the groomed jet mass predicted for dijet events using \textsc{Pythia} and \textsc{Herwig} and separated into quark jets and gluon jets.  The SoftDrop grooming algorithm is used with the most aggressive grooming parameter $\beta=0$ (this also corresponds to mMDT).  The leading logarithm prediction for the differential cross section in the intermediate mass region ($-3\lesssim\log_{10}(m^2/p_T^2)\lesssim -2$) is a roughly linear distribution, the slope of which is different for quarks and gluons and it is nearly flat for quarks because of the value $z_\text{cut}=0.1$ chosen in this study~\cite{Dasgupta:2013ihk}. In the absence of non-perturbative effects, these trends would continue down to arbitrarily small masses. Interestingly, the non-perturbative corrections are very different for quarks and gluons, with a much larger bump for quarks.  Furthermore, the corrections for \textsc{Pythia}and \textsc{Herwig} gluons are qualitatively different, with a clear peak for \textsc{Pythia} gluons and the absence of a peak for \textsc{Herwig}.
 
 \begin{figure}[h!]
 \centering
 \includegraphics[width=0.6\textwidth]{figs/NPbumpvariations.pdf}
-\caption{The binned differential cross-section for the groomed jet mass using Pythia and Herwig and separately for quark and gluon jets.}
+\caption{The binned differential cross-section for the groomed jet mass using \textsc{Pythia} and \textsc{Herwig} and separately for quark and gluon jets.}
 \label{fig:jets:np:qg}
 \end{figure}
 
-The large model-dependence for gluon jets in Fig.~\ref{fig:jets:np:qg} motivated further studies.  It was found that the differences between quarks and gluons and between models were unrelated to gluon splitting to heavy flavor quarks and to specific hadronic resonances.  The effects are nearly 100\% correlated with jet constituent multiplicity.  Furthermore, the results depend strongly on the grooming parameters ($\beta$ and $z_\text{cut}$).  Additional studies of the dependence on the hadronization model are illustrated in Fig.~\ref{fig:jets:np:tracks}. In this figure a comparison is made for gluon jets originating from $pp\to Zg$ for 3 different showers and making use of 2 different hadronization models.  In particular, the blue and green lines are produced using Sherpa~2.2.6~\cite{Bothmann:2019yzt} and fix everything about the simulation except for the hadronization model, which is switched between the default Cluster hadronization model~\cite{Winter:2003tt} and the Lund String model~\cite{Sjostrand:1982fn}. In addition lines for Pythia~8.2~\cite{Sjostrand:2014zea} and Vincia~2.3-$\beta$~\cite{Fischer:2016vfv} are included, both of which make use of the Lund String model. For $\lesssim\log_{10}(m^2/p_T^2)\lesssim -5$, there are $\mathcal{O}(1)$ differences between the different hadronization models while the rest of the spectrum is nearly unchanged, as expected.  However, this region is not probed differentially in the most recent ATLAS and CMS jet mass measurements.  The left plot of Fig.~\ref{fig:jets:np:tracks} shows that the entire region of interest for the large non-perturbative effects is covered by a single measurement bin.  The experimental jet mass resolution is poor in this region due to finite calorimeter granularity.  The right plot of Fig.~\ref{fig:jets:np:tracks} shows that the trends are largely preserved when only using tracking information, which has the potential to provide the necessary precision to probe the non-perturbative region in detail.
+The large model-dependence for gluon jets in Fig.~\ref{fig:jets:np:qg} motivated further studies.  It was found that the differences between quarks and gluons and between models were unrelated to gluon splitting to heavy flavor quarks and to specific hadronic resonances.  The effects are nearly 100\% correlated with jet constituent multiplicity.  Furthermore, the results depend strongly on the grooming parameters ($\beta$ and $z_\text{cut}$).  Additional studies of the dependence on the hadronization model are illustrated in Fig.~\ref{fig:jets:np:tracks}. In this figure a comparison is made for gluon jets originating from $pp\to Zg$ for 3 different showers and making use of 2 different hadronization models.  In particular, the blue and green lines are produced using \textsc{Sherpa}~2.2.6~\cite{Bothmann:2019yzt} and fix everything about the simulation except for the hadronization model, which is switched between the default Cluster hadronization model~\cite{Winter:2003tt} and the Lund String model~\cite{Sjostrand:1982fn}. In addition lines for \textsc{Pythia}~8.2~\cite{Sjostrand:2014zea} and Vincia~2.3-$\beta$~\cite{Fischer:2016vfv} are included, both of which make use of the Lund String model. For $\lesssim\log_{10}(m^2/p_T^2)\lesssim -5$, there are $\mathcal{O}(1)$ differences between the different hadronization models while the rest of the spectrum is nearly unchanged, as expected.  However, this region is not probed differentially in the most recent ATLAS and CMS jet mass measurements.  The left plot of Fig.~\ref{fig:jets:np:tracks} shows that the entire region of interest for the large non-perturbative effects is covered by a single measurement bin.  The experimental jet mass resolution is poor in this region due to finite calorimeter granularity.  The right plot of Fig.~\ref{fig:jets:np:tracks} shows that the trends are largely preserved when only using tracking information, which has the potential to provide the necessary precision to probe the non-perturbative region in detail.
 
 \begin{figure}[h!]
 \centering
